- move lesson's and shift's delete logic to domain - do not allow deletion of lessons whose shift has students and/or groups of students - renamed InvalidMarksServiceException to FenixServiceMultipleException